Изменены пути http запросов и, соответственно, обновлена документация
